--- a/style/styles.css
+++ b/style/styles.css
@@ -12,21 +12,12 @@
 
 @font-face {
   font-family: charter;
-  src: url(./fonts/Charter/charter_regular.woff2)
+  src: url(../fonts/Charter/charter_regular.woff2)
 }
 
 @font-face {
   font-family: tenor;
-  src: url(./fonts/TenorSans/TenorSans-Regular.ttf)
-}
-
-@font-face {
-  font-family: noto;
-  src: url(./fonts/Noto_Sans/NotoSans-VariableFont_wdth,wght.ttf)
-}
-
-html, body {
-  height: 100%;
+  src: url(../fonts/TenorSans/TenorSans-Regular.ttf)
 }
 
 h1 {
@@ -36,53 +27,52 @@ h1 {
   padding: 1rem;
   font-family: charter;
   font-weight: bold;
-  font-size: 2.5em;
+  font-size: clamp(1.5rem, 6vw, 2.5rem);
   color: white;
-  text-shadow: 4px 4px 8px grey;
+  text-shadow: 4px 4px 8px navy;
 }
 
 .recipelist {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
-  padding: 1rem 0 0 ;
+  padding-top: 1rem;
   list-style: none;
-  font-family: noto;
-  text-align: center;
+  font-family: tenor;
 }
 
 li {
-  max-width: 200px;
-  margin: 1rem 1rem;
-  display: inline-block;
+  margin: 2rem auto;
   vertical-align: top;
+  text-align: center;
 }
 
 .responsiveimage {
   width: 100%;
   height: auto;
   padding: 0;
-  border-radius: 70px;
-  margin-top: 10px;
+  border-radius: 50%;
+  margin-top: 0.6rem;
   box-shadow: 0 3px 10px 0 orange;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .responsiveimage:hover {
   background-color: #f7bf6b;
-  border-radius: 50px;
+  border-radius: 30%;
   transform: scale(1.03);
   box-shadow: 0 6px 20px 0 orange;
 }
 
 .recipename {
   text-decoration: underline wavy orange;
-  color: black;
+  color: navy;
   text-shadow: 4px 4px 8px grey;
-  padding: 3% 3%;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem 0.5rem;
   border-radius: 5px;
   display: inline-block;
-  transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease, text-decoration-color 0.3s ease
+  transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease, text-decoration-color 0.3s ease;
 }
 
 .recipename:hover {
